<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.healthyrecipes.Recipe">

    <TextView
        android:text="@string/txtItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtIngredients"
        android:layout_alignLeft="@+id/txtIngredients"
        android:layout_alignStart="@+id/txtIngredients"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="17dp"
        android:id="@+id/txtItem1"
        android:textSize="25sp" />

    <TextView
        android:text="@string/txtItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtItem1"
        android:layout_alignLeft="@+id/txtItem1"
        android:layout_alignStart="@+id/txtItem1"
        android:layout_marginTop="15dp"
        android:id="@+id/txtItem2"
        android:textSize="25sp" />

    <TextView
        android:text="@string/txtItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/txtItem4"
        android:layout_below="@+id/txtItem3"
        android:layout_alignLeft="@+id/txtItem3"
        android:layout_alignStart="@+id/txtItem3"
        android:textSize="25sp" />

    <TextView
        android:text="@string/txtItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtItem3"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/txtItem2"
        android:layout_alignLeft="@+id/txtItem2"
        android:layout_alignStart="@+id/txtItem2"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle2"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/txtTitle" />

    <TextView
        android:text="@string/txtMix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMix"
        android:textSize="25sp"
        android:layout_below="@+id/txtDirections"
        android:layout_alignLeft="@+id/txtItem4"
        android:layout_alignStart="@+id/txtItem4" />

    <TextView
        android:text="@string/txtIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtIngredients"
        android:textSize="30sp"
        android:layout_below="@+id/txtTitle2"
        android:layout_alignLeft="@+id/txtTitle2"
        android:layout_alignStart="@+id/txtTitle2" />

    <TextView
        android:text="@string/txtDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/txtDirections"
        android:textSize="30sp"
        android:layout_below="@+id/txtItem4"
        android:layout_alignLeft="@+id/txtIngredients"
        android:layout_alignStart="@+id/txtIngredients" />
</RelativeLayout>
